pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-128-fenced_code_blocks.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 121
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/128-fenced_code_blocks.md
---
[36m│[0m [3m[33maaa
[0m[36m│[0m 

bbb
